--- a/libs/base/package.json
+++ b/libs/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "base",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "This library was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.2.0.",
   "main": "karma.conf.js",
   "scripts": {
